Move faster notifications when expanding one. Use correct z-index.

--- a/client/css/_notifications.styl
+++ b/client/css/_notifications.styl
@@ -39,6 +39,10 @@
   .animate
     transition top .5s
 
+  .fast-animate
+    /* Twice as fast as additional information slide down animation time */
+    transition top .1s ease-out
+
   .success
     background-color green
 
